Ajustes para calculo de ISR mensual en nómina semanal.